--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/openai": "^2.0.71",
     "@ai-sdk/react": "^2.0.100",
     "@monaco-editor/react": "^4.7.0",
+    "@vercel/blob": "^2.0.0",
     "ai": "^5.0.100",
     "clsx": "^2.1.1",
     "lucide-react": "^0.554.0",
