--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^2.0.45",
     "@ai-sdk/openai": "^2.0.71",
     "@ai-sdk/react": "^2.0.100",
     "@monaco-editor/react": "^4.7.0",
