Switch Claude integration to Azure Anthropic SDK
Replaces the ai-sdk/anthropic integration with the official @anthropic-ai/sdk to support Azure-hosted Claude Sonnet. Updates the chat API route to use the new SDK, adds model selection logic, and updates dependencies to include @anthropic-ai/sdk and openai.

--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@ai-sdk/anthropic": "^2.0.45",
     "@ai-sdk/openai": "^2.0.71",
     "@ai-sdk/react": "^2.0.100",
+    "@anthropic-ai/sdk": "^0.71.2",
     "@monaco-editor/react": "^4.7.0",
     "@vercel/blob": "^2.0.0",
     "ai": "^5.0.100",
     "clsx": "^2.1.1",
     "lucide-react": "^0.554.0",
     "next": "16.0.7",
+    "openai": "^6.10.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.4.0",
