--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^2.0.45",
+    "@ai-sdk/azure": "2.0.90",
     "@ai-sdk/openai": "^2.0.71",
     "@ai-sdk/react": "^2.0.100",
     "@anthropic-ai/sdk": "^0.71.2",
